Fix page shift, results counter & width

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,11 +16,11 @@
 	padding:0px;
 	padding-top: 13px;
 	padding-bottom: 0px;
-	padding-left:160px;
+	padding-left:169px;
 	overflow: hidden;
 	text-align: center;
 	/*background-color: #f9f9f9;*/
-	width: 612px;
+	width: 663px;
 }
 
 .time-li {
